--- a/src/styles.less
+++ b/src/styles.less
@@ -11,6 +11,39 @@ body {
 
 }
 
+input, textarea, select {
+  border-bottom: 2px solid white;
+  border-left: none;
+  border-right: none;
+  border-top: none;
+  background-color: transparent;
+  box-shadow: none;
+  padding: 15px;
+  font-size: 15px;
+  color: white;
+
+}
+
+textarea::placeholder, input::placeholder {
+  color: white;
+  padding: 5px;
+  text-align: right;
+  vertical-align: middle;
+  font-size: 15px;
+  opacity: 0.6;
+}
+
+textarea:focus, input:focus {
+  border-bottom: 2px solid #5b444b;
+  outline-width: 0;
+  outline-offset: 0;
+}
+
+h1 {
+  color: white;
+  text-align: center;
+}
+
 a {
   text-decoration: none;
 }
@@ -142,11 +175,6 @@ nav > .menu.mob-main-menu-active {
   width: 75%;
   margin: auto;
 
-}
-
-.tabs-container > h1 {
-  color: white;
-  text-align: center;
 }
 
 .tabs-container > ul {
@@ -287,6 +315,113 @@ article > img {
 
 }
 
+.form {
+  background-color: #000000c2;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  align-items: center;
+  font-size: 25px;
+  padding: 20px 0;
+  color: white;
+
+  & form {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    align-items: center;
+    //padding: 25px;
+    margin: auto;
+    //width: 80%;
+    width: 100%;
+
+    & .fieldset {
+      //display: flex;
+      flex-wrap: wrap;
+      margin: 0 auto;
+      //width: 70%;
+      width: 100%;
+      border: 0;
+      background-color: tomato;
+
+      & p:nth-child(1), p:nth-child(2) {
+        display: inline;
+        //margin: 20px;
+        //padding: 10px;
+      }
+    }
+
+    & p {
+      //display: flex;
+      //align-items: center;
+      align-items: flex-start;
+      margin: 0 10px;
+      //padding-left: 40px;
+      //width: 50%;
+
+      &:last-child {
+        width: 100%;
+        display: block;
+        text-align: center;
+        margin: 0;
+      }
+
+      & > label {
+        flex-shrink: 0;
+        //width: 25%;
+        //width: 100%;
+
+        font-size: 23px;
+        margin-left: 5px;
+      }
+
+    }
+
+    & input:not([type=radio]), & textarea, & select {
+      flex-grow: 1;
+      //margin: 30px 40px;
+      margin: 10px 5px;
+      width: 95%;
+
+      &[type=radio] {
+        margin: 5px;
+
+      }
+
+      &[type = submit] {
+        border: none;
+        background-color: white;
+        color: #b5514a;
+        padding: 20px 50px;
+        font-size: 25px;
+
+        &:hover {
+          background-color: #5a444b;
+          color: white;
+        }
+      }
+    }
+
+    select {
+      option {
+        background-color: tomato;
+        color: white;
+        padding: 20px;
+      }
+    }
+  }
+
+  .loader {
+    border: 4px solid #00000038;
+    border-radius: 50%;
+    border-top: 4px dotted tomato;
+    width: 80px;
+    height: 80px;
+    animation: loader 2s linear infinite;
+  }
+}
+
 @media (max-width: 1400px) {
   article > img {
     width: 100%;
@@ -348,8 +483,54 @@ article > img {
       right: 15%;
     }
 
+  }
 
+  .form {
+    & form {
+      padding: 25px;
+      width: 80%;
 
+      & .fieldset {
+        //display: flex;
+        //width: 70%;
+
+      }
+
+      & p {
+        display: flex;
+        align-items: center;
+        width: 100%;
+        //padding-left: 40px;
+        //width: 50%;
+
+        &:last-child {
+          width: 100%;
+          display: block;
+          text-align: center;
+        }
+
+        & > label {
+          flex-shrink: 0;
+          width: 25%;
+          //width: 100%;
+
+          font-size: 23px;
+          margin-left: 5px;
+        }
+      }
+
+      & input:not([type=radio]), & textarea, & select {
+        flex-grow: 1;
+        margin: 30px 40px;
+        //margin: 10px 5px;
+        //width: 95%;
+
+        &[type = submit] {
+          width: auto;
+        }
+      }
+
+    }
   }
 
 }
@@ -410,38 +591,8 @@ article > img {
     padding-left: 15px;
   }
 
-  .header-menu > li > a > span > input {
-    border-bottom: 2px solid white;
-    border-left: none;
-    border-right: none;
-    border-top: none;
-    background-color: transparent;
-    box-shadow: none;
-    padding: 15px;
-    font-size: 15px;
-    color: white;
-
-  }
-
   .header-menu > li:hover {
     background-color: transparent;
-  }
-
-  .header-menu > li > a > span > input::placeholder {
-    color: white;
-    padding: 5px;
-    text-align: right;
-    vertical-align: middle;
-    font-size: 15px;
-    opacity: 0.6;
-  }
-
-  .header-menu > li > a > span > input:focus {
-    border-left: 1px solid lightgrey;
-    border-top: 1px solid lightgrey;
-    border-right: 1px solid lightgrey;
-    outline-width: 0;
-    outline-offset: 0;
   }
 
   nav {
@@ -506,11 +657,10 @@ article > img {
     //&.modal-content {
     //  text-align: center;
 
-      & .modal {
-        left: 15%;
-        right: 15%;
-      }
-
+    & .modal {
+      left: 15%;
+      right: 15%;
+    }
 
   }
 
@@ -518,8 +668,58 @@ article > img {
     width: auto;
   }
 
+  .form {
+    & form {
+      padding: 25px;
+      width: 80%;
+
+      & .fieldset {
+        display: flex;
+        padding: 20px;
+        width: 95%;
+
+      }
+
+      & p {
+        display: flex;
+        align-items: center;
+        padding-left: 40px;
+        width: 45%;
+
+        &:last-child {
+          width: 100%;
+          display: block;
+          text-align: center;
+        }
+
+        & > label {
+          flex-shrink: 0;
+          width: 25%;
+          font-size: 25px;
+          margin-left: 5px;
+        }
+      }
+
+      & input:not([type=radio]), & textarea, & select {
+        flex-grow: 1;
+        margin: 30px 40px;
+        width: 95%;
+
+        &[type = submit] {
+          width: auto;
+        }
+      }
+
+    }
+  }
+
 }
 
+
+@keyframes loader {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
 
 
 
