--- a/src/styles.less
+++ b/src/styles.less
@@ -6,7 +6,8 @@
 
 body {
   /*background-color: #4f4f52;*/
-  background-image: url("https://wallup.net/wp-content/uploads/2016/01/299643-low_poly-abstract-748x499.png");
+  //background-image: url("https://wallup.net/wp-content/uploads/2016/01/299643-low_poly-abstract-748x499.png");
+  background-image: url("https://hdqwalls.com/wallpapers/low-poly-space-art.jpg");
   margin: 0;
 
 }
@@ -100,11 +101,13 @@ nav {
   position: absolute;
   right: 0;
   width: 100%;
+  z-index: 2;
 
   & > .menu {
     display: none;
 
   }
+
 }
 
 .menu {
@@ -112,6 +115,7 @@ nav {
   flex-direction: column;
   justify-content: space-between;
   margin-top: 0;
+  margin-bottom: 0px;
   border-top: 1px solid #ffffff54;
   align-items: flex-end;
 }
@@ -169,6 +173,221 @@ nav > .menu.mob-main-menu-active {
   content: '';
   background-image: url("images/left-arrow.svg");
   transform: rotate(270deg);
+}
+
+.parallax {
+  font-size: 25px;
+  text-align: justify;
+
+  .rosem-carousel {
+    .mySlides {
+      display: none
+    }
+
+    img {
+      vertical-align: middle;
+    }
+
+    /* Slideshow container */
+
+    .slideshow-container {
+      max-width: 1000px;
+      position: relative;
+      margin: auto;
+    }
+
+    /* Next & previous buttons */
+
+    .prev,
+    .next {
+      cursor: pointer;
+      position: absolute;
+      top: 50%;
+      width: auto;
+      padding: 16px;
+      margin-top: -22px;
+      color: white;
+      font-weight: bold;
+      font-size: 18px;
+      transition: 0.6s ease;
+      border-radius: 0 3px 3px 0;
+    }
+
+    /* Position the "next button" to the right */
+
+    .next {
+      right: 0;
+      border-radius: 3px 0 0 3px;
+    }
+
+    /* On hover, add a black background color with a little bit see-through */
+
+    .prev:hover,
+    .next:hover {
+      background-color: rgba(0, 0, 0, 0.8);
+    }
+
+    /* Caption text */
+
+    .text {
+      color: #f2f2f2;
+      font-size: 15px;
+      padding: 8px 12px;
+      position: absolute;
+      bottom: 8px;
+      width: 100%;
+      text-align: center;
+    }
+
+    /* Number text (1/3 etc) */
+
+    .numbertext {
+      color: #f2f2f2;
+      font-size: 12px;
+      padding: 8px 12px;
+      position: absolute;
+      top: 0;
+    }
+
+    /* The dots/bullets/indicators */
+
+    .dot {
+      cursor: pointer;
+      height: 15px;
+      width: 15px;
+      margin: 0 2px;
+      background-color: #bbb;
+      border-radius: 50%;
+      display: inline-block;
+      transition: background-color 0.6s ease;
+    }
+
+    .active,
+    .dot:hover {
+      background-color: #717171;
+    }
+
+    .dot-cursor{
+      cursor: url("https://cdn2.iconfinder.com/data/icons/social-media-ui/33/cancel-128.png"), auto;
+    }
+
+    /* Fading animation */
+
+    .fade {
+      -webkit-animation-name: fade;
+      -webkit-animation-duration: 1.5s;
+      animation-name: fade;
+      animation-duration: 1.5s;
+    }
+
+    .disabled {
+      display: none;
+    }
+
+    @-webkit-keyframes fade {
+      from {
+        opacity: .4
+      }
+      to {
+        opacity: 1
+      }
+    }
+
+    @keyframes fade {
+      from {
+        opacity: .4
+      }
+      to {
+        opacity: 1
+      }
+    }
+
+    /* On smaller screens, decrease text size */
+
+    @media only screen and (max-width: 300px) {
+      .prev,
+      .next,
+      .text {
+        font-size: 11px
+      }
+    }
+
+  }
+
+  & .parallax-image-1 {
+    display: none;
+    background-image: url("http://www.meh.ro/wp-content/uploads/2016/03/meh.ro12359.jpg");
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 900px;
+    //height: 300px;
+
+    &::before {
+      content: ' ';
+      border: 70px solid transparent;
+      border-top: 60px solid #f3aa4d;
+      bottom: -5%;
+      z-index: 2;
+      position: absolute;
+      margin-left: 50%;
+    }
+
+  }
+
+  & .parallax-image-2 {
+    display: none;
+    background-image: url("http://www.tokkoro.com/picsup/2808983-low-poly-landscape___landscape-nature-wallpapers.jpg");
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 600px;
+    //height: 300px;
+    position: relative;
+    //opacity: 0.8;
+  }
+
+  & .description-1 {
+    display: none;
+    position: absolute;
+    bottom: 41%;
+    //top: 20%;
+    background-color: #ffffff6b;
+    padding: 26px 40px;
+    //display: none;
+    font-size: 16px;
+
+    &:first-child {
+
+    }
+
+    & > p {
+      text-indent: 40px;
+    }
+
+    & > h1 {
+      color: black;
+    }
+
+  }
+  & .description-2 {
+    display: none;
+    position: absolute;
+    bottom: -52%;
+    background-color: #93248552;
+    color: white;
+    padding: 50px;
+    margin-left: 20%;
+    margin-right: 20%;
+    font-size: 16px;
+
+    & > p {
+      text-indent: 40px;
+    }
+
+  }
 }
 
 .tabs-container {
@@ -343,7 +562,7 @@ article > img {
       //width: 70%;
       width: 100%;
       border: 0;
-      background-color: tomato;
+      background-color: #93248552;
 
       & p:nth-child(1), p:nth-child(2) {
         display: inline;
@@ -468,6 +687,29 @@ article > img {
   nav > .menu.mob-main-menu-active {
     display: flex;
 
+  }
+
+  .parallax {
+
+    .rosem-carousel {
+      display: none;
+    }
+
+    & .parallax-image-1 {
+      display: block;
+    }
+
+    & .description-1 {
+      display: block;
+    }
+
+    & .parallax-image-2 {
+      display: block;
+    }
+
+    & .description-2 {
+      display: block;
+    }
   }
 
   .menu > li > a::before {
@@ -664,6 +906,28 @@ article > img {
 
   }
 
+  .parallax {
+    .rosem-carousel {
+      display: none;
+    }
+
+    & .parallax-image-1 {
+      display: block;
+    }
+
+    & .description-1 {
+      display: block;
+    }
+
+    & .parallax-image-2 {
+      display: block;
+    }
+
+    & .description-2 {
+      display: block;
+    }
+  }
+
   .modal-container .modal .modal-content > img {
     width: auto;
   }
@@ -715,10 +979,13 @@ article > img {
 
 }
 
-
 @keyframes loader {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 
