--- a/src/styles.less
+++ b/src/styles.less
@@ -406,13 +406,13 @@ nav > .menu.mob-main-menu-active {
 
 .tabs-container ul > li {
   width: calc(100% / 3);
-  background-color: #b5514a /*#3d2a6c /*#7652d3*/;
+  background-color: #b51846 /*#b5514a /*#3d2a6c /*#7652d3*/;
   padding: 25px;
 }
 
 .tabs-container > ul > li:hover, .tabs-container > ul > li.active {
 
-  background-color: #5b444b /*#4f4089 /*#6b5ead*/;
+  background-color: #551853 /*#5b444b /*#4f4089 /*#6b5ead*/;
 
 }
 
@@ -502,7 +502,7 @@ article > img {
         display: inline-block;
         text-align: center;
         color: white;
-        background-color: #b5514a;
+        background-color:  #b51846;
         padding: 10px;
         margin: 5px;
 
@@ -515,11 +515,11 @@ article > img {
 
     & .modal-header {
 
-      background-color: #b5514a;
+      background-color:  #b51846;
       text-align: right;
 
       &:hover {
-        background-color: #5a444b;
+        background-color: #551853;
       }
 
       & > span {
@@ -535,7 +535,7 @@ article > img {
 }
 
 .form {
-  background-color: #000000c2;
+  //background-color: #000000c2;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
