--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -127,7 +127,7 @@ nav > .menu.mob-main-menu-active {
 
 .menu > li > a::before {
   content: '';
-  background: url("images/right-arrow.svg");
+  //background: url("./images/right-arrow.svg");
   display: inline-block;
   width: 20px;
   height: 20px;
@@ -171,7 +171,7 @@ nav > .menu.mob-main-menu-active {
 
 .menu > li > a:hover::before, .menu > li.active-item > a::before {
   content: '';
-  background-image: url("images/left-arrow.svg");
+  //background-image: url("./images/left-arrow.svg");
   transform: rotate(270deg);
 }
 
@@ -314,27 +314,35 @@ nav > .menu.mob-main-menu-active {
 
   }
 
-  & .parallax-image-1 {
-    display: none;
-    background-image: url("http://www.meh.ro/wp-content/uploads/2016/03/meh.ro12359.jpg");
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 900px;
-    //height: 300px;
+  & .main-parallax {
 
-    &::before {
+    &::after {
       content: ' ';
       border: 70px solid transparent;
       border-top: 60px solid #f3aa4d;
-      bottom: -5%;
-      z-index: 2;
+      bottom: 0%;
       position: absolute;
-      margin-left: 50%;
+      left: 50%;
+      transform: translateX(-50%);
     }
 
   }
+      & .parallax-image-1 {
+        display: none;
+        //background-image: url("http://www.meh.ro/wp-content/uploads/2016/03/meh.ro12359.jpg");
+        //background-image: url("https://c1.staticflickr.com/8/7580/15763988775_fcbf404d2e_b.jpg");
+        background-image: url("https://mir-s3-cdn-cf.behance.net/project_modules/fs/adf9dc9796049.560da35cac6a4.jpg");
+        background-attachment: fixed;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        height: 900px;
+        opacity: 0.6;
+        //transform: rotate(180deg);
+
+      }
+
+
 
   & .parallax-image-2 {
     display: none;
@@ -351,37 +359,34 @@ nav > .menu.mob-main-menu-active {
 
   & .description-1 {
     display: none;
+    color: white;
     position: absolute;
     bottom: 41%;
-    //top: 20%;
-    background-color: #ffffff6b;
+    //background-color: #ffffff6b;
+    background-color: #b6314685;
     padding: 26px 40px;
-    //display: none;
-    font-size: 16px;
+    font-size: 25px;
 
-    &:first-child {
-
-    }
 
     & > p {
       text-indent: 40px;
+      text-align: justify;
+      margin-left: 10%;
+      margin-right: 10%;
     }
 
-    & > h1 {
-      color: black;
-    }
 
   }
   & .description-2 {
     display: none;
     position: absolute;
-    bottom: -52%;
+    bottom: -50%;
     background-color: #93248552;
     color: white;
     padding: 50px;
     margin-left: 20%;
     margin-right: 20%;
-    font-size: 16px;
+    font-size: 25px;
 
     & > p {
       text-indent: 40px;
@@ -391,7 +396,7 @@ nav > .menu.mob-main-menu-active {
 }
 
 .tabs-container {
-  width: 75%;
+  width: 95%;
   margin: auto;
 
 }
@@ -424,7 +429,8 @@ nav > .menu.mob-main-menu-active {
 }
 
 .tabs-container .tab-content {
-  background-color: white;
+  background-color: #110e0e9c;
+  color: white;
 
 }
 
@@ -433,6 +439,7 @@ nav > .menu.mob-main-menu-active {
   margin: auto;
   padding: 20px;
   display: none;
+
 
 }
 
@@ -445,6 +452,7 @@ article > img {
   margin: 15px auto;
   padding: 10px;
   display: block;
+  width: 100%;
 
 }
 
@@ -690,6 +698,80 @@ article > img {
   }
 }
 
+.gallery {
+  & .gallery-container {
+    display: flex;
+    flex-direction: column;
+
+    & .card {
+      //display: flex;
+      text-align: center;
+      color: white;
+      border: 1px solid #ffffff3b;
+      margin: 10px;
+      position: relative;
+      overflow: hidden;
+      background-color: #000000a6;
+
+      & .overlay {
+        display: flex;
+        opacity: 0;
+        position: absolute;
+        transition: all .45s ease-in;
+        top: 100%;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        transform: scale(0) rotate(220deg);
+        border-radius: 50%;
+
+        & > a {
+          color: white;
+          background-color: #b51846;
+          padding: 10px 50px;
+          margin: auto;
+
+
+        }
+      }
+
+
+       &:hover .overlay {
+        background-color: #93248552;
+        opacity: 1;
+        transform: scale(1.5) rotate(0deg);
+        border-radius: 0;
+        top:0;
+
+      }
+
+      & .image {
+
+        width: 444px;
+
+        &  > img{
+          width: 100%;
+          height: 250px;
+          object-fit: cover;
+
+        }
+
+      }
+
+      & .shot-description {
+        padding: 15px;
+
+
+      }
+
+    }
+
+  }
+}
+
+
+
+
 @media (max-width: 1400px) {
   article > img {
     width: 100%;
@@ -831,6 +913,21 @@ article > img {
 
     & article  {
       margin: 45px 65px;
+    }
+  }
+
+  .gallery {
+    width: 95%;
+    margin: auto;
+
+    & .gallery-container {
+      flex-direction: row;
+      flex-wrap: wrap;
+      align-content: center;
+
+      & .card {
+        flex: 45%;
+      }
     }
   }
 
@@ -1046,7 +1143,24 @@ article > img {
     }
   }
 
+  .gallery {
+    width: 70%;
+    margin: auto;
+
+    & .gallery-container {
+      flex-direction: row;
+      flex-wrap: wrap;
+      align-content: center;
+
+      & .card {
+        flex: 30%;
+      }
+    }
+  }
+
 }
+
+
 
 @keyframes loader {
   0% {
